Add error and Validation
